20150319 ui/uijoystick.c: fix memory leak and remove unneeded "out of memory"
         error handling (Sergio).
20150322 menu.c,tape.[c|h]: don't show an error when rewinding an empty tape
         (Sergio).
20150322 ui/gtk/{confirm.c,fileselector.c,gtkinternals.h,pokemem.c,stock.c}:
         replace deprecated GtkStock (Sergio).
20150322 ui/gtk/browse.c: clear out row mark in tape browser when selecting
         another block (Sergio).
20150328 debugger/breakpoint.c: store the matched breakpoint before removing it
         from the list and freeing it (fixes bug #317) (Tom Seddon).
20150402 man/fuse.1: adjust some references to peripherals options (Sergio).
20150402 compat/win32/distribution.mk,ui/win32/installer/fuse.nsi.in: prefer
         groff over man2html. Ensure tables are not broken. Distribute images
         referenced in the manual (Sergio).
20150405 man/fuse.1: adjust some cross-references (Sergio).
20150405 compat/win32/osname.c,sound/win32sound.c,ui/win32/{browse.c,debugger.c,
         pokefinder.c,ui/win32/pokemem.c,rollback.c,win32ui.c}: add missing
         const qualifiers and casts (Sergio).
20150411 compat/win32/distribution.mk: revert the use of variables for groff and
         man2html, escape variable substitution (thanks, Stuart) (Sergio).
20150425 z80/z80_ops.c: fix timing of events when emulating Scorpion (Stuart).
20150428 fuse.c,machines/machines_periph.c,man/fuse.1,periph.h,
         peripherals/{Makefile.am,usource.[ch],settings.dat,ui/options.dat,
         unittests/unittests.c,z80/{coretest.c,z80_checks.h,z80_ops.c}:
         add Currah µSource emulation (Stuart).
20150429 menu.c,menu_data.c: add menu item for Currah µSource ROM selection
         (Stuart).
20150429 menu_data.c: split Select ROMs menu into Machines and Peripherals
         (part of patch #87) (Gergely Szasz).
20150429 settings.pl: add Currah µSource ROM setting (Stuart).
20150429 peripherals/disk/opus.c: clear all Opus RAM on hard reset (Stuart).