@@ -46,14 +46,14 @@
 #include "options.h"	/* needed for get combo options */
 #include "z80/z80.h"
 
+#define TRUE_OPUS_RAM_SIZE 0x800
+
 /* FIXME: this is wrong. Opus has only 2 Kb of RAM, but we can't handle
    anything less than our page size */
-#define OPUS_RAM_SIZE 0x1000
+#define OPUS_RAM_PAGES ( TRUE_OPUS_RAM_SIZE / MEMORY_PAGE_SIZE \
+  ? TRUE_OPUS_RAM_SIZE / MEMORY_PAGE_SIZE : 1 )
 
-#define OPUS_RAM_PAGES ( OPUS_RAM_SIZE / MEMORY_PAGE_SIZE \
-  ? OPUS_RAM_SIZE / MEMORY_PAGE_SIZE : 1 )
-
-#define TRUE_OPUS_RAM_SIZE 0x800
+#define OPUS_RAM_SIZE ( MEMORY_PAGE_SIZE * OPUS_RAM_PAGES )
 
 static int opus_rom_memory_source, opus_ram_memory_source;
 
@@ -119,7 +119,13 @@ opus_memory_map( void )
   if( !opus_active ) return;
 
   memory_map_romcs_8k( 0x0000, opus_memory_map_romcs_rom );
+#if OPUS_RAM_SIZE == TRUE_OPUS_RAM_SIZE
+  memory_map_romcs_2k( 0x2000, opus_memory_map_romcs_ram );
+  /* FIXME: should we add mirroring at 0x2800, 0x3000 and/or 0x3800? */
+#else
+  /* FIXME: remove this */
   memory_map_romcs_4k( 0x2000, opus_memory_map_romcs_ram );
+#endif
 }
 
 static void
@@ -509,7 +515,13 @@ opus_unittest( void )
   opus_page();
 
   r += unittests_assert_8k_page( 0x0000, opus_rom_memory_source, 0 );
+#if OPUS_RAM_SIZE == TRUE_OPUS_RAM_SIZE
+  r += unittests_assert_2k_page( 0x2000, opus_ram_memory_source, 0 );
+  /* FIXME: should we add mirroring at 0x2800, 0x3000 and/or 0x3800? */
+#else
+  /* FIXME: remove this */
   r += unittests_assert_4k_page( 0x2000, opus_ram_memory_source, 0 );
+#endif
   r += unittests_assert_4k_page( 0x3000, memory_source_rom, 0 );
   r += unittests_assert_16k_ram_page( 0x4000, 5 );
   r += unittests_assert_16k_ram_page( 0x8000, 2 );
